--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,6 +11,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Nova Square', sans-serif;
+  background-image: url('../src/assets/images/background.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 h1{
   margin: 0;
